--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
       <li data-time="">How Do You Live?</li>
     </ul>
 <script>
+  const timeNodes = Array.from(document.querySelectorAll('[data-time]'));
+
+
+
+  console.log(timeNodes);
 </script>
 </body>
 </html>
