--- a/index.html
+++ b/index.html
@@ -33,9 +33,15 @@
 <script>
   const timeNodes = Array.from(document.querySelectorAll('[data-time]'));
 
+  const minutes = timeNodes
+  .map(node => node.dataset.time)
+  .map(timeCode => {
+    const [hours, mins] = timeCode.split(':');
+    console.log(hours, mins);
+  })
 
 
-  console.log(timeNodes);
+ 
 </script>
 </body>
 </html>
