--- a/index.html
+++ b/index.html
@@ -36,12 +36,9 @@
   const minutes = timeNodes
   .map(node => node.dataset.time)
   .map(timeCode => {
-    const [hours, mins] = timeCode.split(':');
-    console.log(hours, mins);
+    const [hours, mins] = timeCode.split(':').map(parseFloat);
+console.log(hours, mins)
   })
-
-
- 
 </script>
 </body>
 </html>
