divs & innerHTML to show total

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
       <li data-time="1:06">The Wind Rises</li>
       <li data-time="2:17">The Tale of the Princess Kaguya</li>
       <li data-time="1:43">When Marnie Was There</li>
-      <li data-time="">How Do You Live?</li>
+      <li data-time="0:00">How Do You Live?</li>
     </ul>
+    <div class="totalhours"></div><p>:</p>
+    <div class="totalminutes"></div>
     <script src="index.js"></script>
-
 </body>
 </html>
