just testing images for styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <li data-time="1:57">Nausicaä of the Valley of the Wind</li>
       <li data-time="2:04">Castle in the Sky</li>
       <li data-time="1:29">Grave of the Fireflies</li>
-      <li data-time="1:27">My Neighbor Totoro</li>
+      <li data-time="1:27">My Neighbor Totoro<img id="totoro" src="assets/81UbyXk3DAL._SL1500_.jpg"></li>
       <li data-time="1:43">Kiki's Delivery Service</li>
       <li data-time="1:58">Only Yesterday</li>
       <li data-time="1:34">Porco Rosso</li>
