testing changing to checkbox

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <ul class="Movies">
-      <li data-time="1:57">Nausicaä of the Valley of the Wind</li>
+      <input id="box" type="checkbox" onclick=changeContent() data-time="1:57">Nausicaä of the Valley of the Wind</input>
       <li data-time="2:04">Castle in the Sky</li>
       <li data-time="1:29">Grave of the Fireflies</li>
       <li data-time="1:27">My Neighbor Totoro<img id="totoro" src="assets/81UbyXk3DAL._SL1500_.jpg"></li>
