--- a/index.html
+++ b/index.html
@@ -5,31 +5,31 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <ul class="Movies">
-      <input id="box" type="checkbox" onclick=changeContent() data-time="1:57">Nausicaä of the Valley of the Wind</input>
-      <li data-time="2:04">Castle in the Sky</li>
-      <li data-time="1:29">Grave of the Fireflies</li>
-      <li data-time="1:27">My Neighbor Totoro<img id="totoro" src="assets/81UbyXk3DAL._SL1500_.jpg"></li>
-      <li data-time="1:43">Kiki's Delivery Service</li>
-      <li data-time="1:58">Only Yesterday</li>
-      <li data-time="1:34">Porco Rosso</li>
-      <li data-time="1:12">Ocean Waves</li>
-      <li data-time="1:59">Pom Poko</li>
-      <li data-time="1:51">Whisper of the Heart</li>
-      <li data-time="2:13">Princess Mononoke</li>
-      <li data-time="1:44">My Neighbors the Yamadas</li>
-      <li data-time="2:05">Spirited Away</li>
-      <li data-time="1:15">The Cat Returns</li>
-      <li data-time="1:59">Howl's Moving Castle</li>
-      <li data-time="1:55">Tales from Earthsea</li>
-      <li data-time="1:41">Ponyo</li>
-      <li data-time="1:35">Arrietty</li>
-      <li data-time="1:32">From Up on Poppy Hill</li>
-      <li data-time="1:06">The Wind Rises</li>
-      <li data-time="2:17">The Tale of the Princess Kaguya</li>
-      <li data-time="1:43">When Marnie Was There</li>
-      <li data-time="0:00">How Do You Live?</li>
-    </ul>
+    <div class="Movies">
+      <input class="box" type="checkbox" data-time="1:57">Nausicaä of the Valley of the Wind</input>
+      <input class="box" type="checkbox" data-time="2:04">Castle in the Sky</input>
+      <input class="box" type="checkbox" data-time="1:29">Grave of the Firefinputes</input>
+      <input class="box" type="checkbox" data-time="1:27">My Neighbor Totoro</input>
+      <input class="box" type="checkbox" data-time="1:43">Kiki's Deinputvery Service</input>
+      <input class="box" type="checkbox" data-time="1:58">Only Yesterday</input>
+      <input class="box" type="checkbox" data-time="1:34">Porco Rosso</input>
+      <input class="box" type="checkbox" data-time="1:12">Ocean Waves</input>
+      <input class="box" type="checkbox" data-time="1:59">Pom Poko</input>
+      <input class="box" type="checkbox" data-time="1:51">Whisper of the Heart</input>
+      <input class="box" type="checkbox" data-time="2:13">Princess Mononoke</input>
+      <input class="box" type="checkbox" data-time="1:44">My Neighbors the Yamadas</input>
+      <input class="box" type="checkbox" data-time="2:05">Spirited Away</input>
+      <input class="box" type="checkbox" data-time="1:15">The Cat Returns</input>
+      <input class="box" type="checkbox" data-time="1:59">Howl's Moving Castle</input>
+      <input class="box" type="checkbox" data-time="1:55">Tales from Earthsea</input>
+      <input class="box" type="checkbox" data-time="1:41">Ponyo</input>
+      <input class="box" type="checkbox" data-time="1:35">Arrietty</input>
+      <input class="box" type="checkbox" data-time="1:32">From Up on Poppy Hill</input>
+      <input class="box" type="checkbox" data-time="1:06">The Wind Rises</input>
+      <input class="box" type="checkbox" data-time="2:17">The Tale of the Princess Kaguya</input>
+      <input class="box" type="checkbox" data-time="1:43">When Marnie Was There</input>
+      <input class="box" type="checkbox" data-time="0:00">How Do You Live?</input>
+    </div>
     <div class="totalhours"></div><p>:</p>
     <div class="totalminutes"></div>
     <script src="index.js"></script>
