--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <div class="Movies">
       <input class="box" type="checkbox" data-time="1:57">Nausicaä of the Valley of the Wind</input>
       <input class="box" type="checkbox" data-time="2:04">Castle in the Sky</input>
-      <input class="box" type="checkbox" data-time="1:29">Grave of the Firefinputes</input>
+      <input class="box" type="checkbox" data-time="1:29">Grave of the Fireflies</input>
       <input class="box" type="checkbox" data-time="1:27">My Neighbor Totoro</input>
-      <input class="box" type="checkbox" data-time="1:43">Kiki's Deinputvery Service</input>
+      <input class="box" type="checkbox" data-time="1:43">Kiki's Delivery Service</input>
       <input class="box" type="checkbox" data-time="1:58">Only Yesterday</input>
       <input class="box" type="checkbox" data-time="1:34">Porco Rosso</input>
       <input class="box" type="checkbox" data-time="1:12">Ocean Waves</input>
