--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
       <input class="box" type="checkbox" data-time="1:57">Nausicaä of the Valley of the Wind</input>
       <input class="box" type="checkbox" data-time="2:04">Castle in the Sky</input>
       <input class="box" type="checkbox" data-time="1:29">Grave of the Fireflies</input>
-      <input class="box" type="checkbox" data-time="1:27">My Neighbor Totoro</input>
+      <input class="box" type="checkbox" data-time="1:27">My Neighbor Totoro</input><br>
       <input class="box" type="checkbox" data-time="1:43">Kiki's Delivery Service</input>
       <input class="box" type="checkbox" data-time="1:58">Only Yesterday</input>
       <input class="box" type="checkbox" data-time="1:34">Porco Rosso</input>
-      <input class="box" type="checkbox" data-time="1:12">Ocean Waves</input>
+      <input class="box" type="checkbox" data-time="1:12">Ocean Waves</input><br>
       <input class="box" type="checkbox" data-time="1:59">Pom Poko</input>
       <input class="box" type="checkbox" data-time="1:51">Whisper of the Heart</input>
       <input class="box" type="checkbox" data-time="2:13">Princess Mononoke</input>
-      <input class="box" type="checkbox" data-time="1:44">My Neighbors the Yamadas</input>
+      <input class="box" type="checkbox" data-time="1:44">My Neighbors the Yamadas</input><br>
       <input class="box" type="checkbox" data-time="2:05">Spirited Away</input>
       <input class="box" type="checkbox" data-time="1:15">The Cat Returns</input>
       <input class="box" type="checkbox" data-time="1:59">Howl's Moving Castle</input>
-      <input class="box" type="checkbox" data-time="1:55">Tales from Earthsea</input>
+      <input class="box" type="checkbox" data-time="1:55">Tales from Earthsea</input><br>
       <input class="box" type="checkbox" data-time="1:41">Ponyo</input>
       <input class="box" type="checkbox" data-time="1:35">Arrietty</input>
       <input class="box" type="checkbox" data-time="1:32">From Up on Poppy Hill</input>
-      <input class="box" type="checkbox" data-time="1:06">The Wind Rises</input>
+      <input class="box" type="checkbox" data-time="1:06">The Wind Rises</input><br>
       <input class="box" type="checkbox" data-time="2:17">The Tale of the Princess Kaguya</input>
       <input class="box" type="checkbox" data-time="1:43">When Marnie Was There</input>
       <input class="box" type="checkbox" data-time="0:00">How Do You Live?</input>
