--- a/index.html
+++ b/index.html
@@ -5,33 +5,48 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="Movies">
+  <header><h1>Watch Guide</h1></header>
+    <div class="bg"></div>
+    <div class="movies">
+      <div class="row1">
       <input class="box" type="checkbox" data-time="1:57">Nausicaä of the Valley of the Wind</input>
       <input class="box" type="checkbox" data-time="2:04">Castle in the Sky</input>
       <input class="box" type="checkbox" data-time="1:29">Grave of the Fireflies</input>
       <input class="box" type="checkbox" data-time="1:27">My Neighbor Totoro</input><br>
+      </div>
+      <div class="row2">
       <input class="box" type="checkbox" data-time="1:43">Kiki's Delivery Service</input>
       <input class="box" type="checkbox" data-time="1:58">Only Yesterday</input>
       <input class="box" type="checkbox" data-time="1:34">Porco Rosso</input>
       <input class="box" type="checkbox" data-time="1:12">Ocean Waves</input><br>
+      </div>
+      <div class="row3">
       <input class="box" type="checkbox" data-time="1:59">Pom Poko</input>
       <input class="box" type="checkbox" data-time="1:51">Whisper of the Heart</input>
       <input class="box" type="checkbox" data-time="2:13">Princess Mononoke</input>
       <input class="box" type="checkbox" data-time="1:44">My Neighbors the Yamadas</input><br>
+      </div>
+      <div class="row4">
       <input class="box" type="checkbox" data-time="2:05">Spirited Away</input>
       <input class="box" type="checkbox" data-time="1:15">The Cat Returns</input>
       <input class="box" type="checkbox" data-time="1:59">Howl's Moving Castle</input>
       <input class="box" type="checkbox" data-time="1:55">Tales from Earthsea</input><br>
+      </div>
+      <div class="row5">
       <input class="box" type="checkbox" data-time="1:41">Ponyo</input>
       <input class="box" type="checkbox" data-time="1:35">Arrietty</input>
       <input class="box" type="checkbox" data-time="1:32">From Up on Poppy Hill</input>
       <input class="box" type="checkbox" data-time="1:06">The Wind Rises</input><br>
+      </div>
+      <div class="row5">
       <input class="box" type="checkbox" data-time="2:17">The Tale of the Princess Kaguya</input>
       <input class="box" type="checkbox" data-time="1:43">When Marnie Was There</input>
       <input class="box" type="checkbox" data-time="0:00">How Do You Live?</input>
+      </div>
     </div>
     <div class="totalhours"></div><p>:</p>
     <div class="totalminutes"></div>
+    <div class="gif"></div>
     <script src="index.js"></script>
 </body>
 </html>
