--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header><h1>Watch Guide</h1></header>
+  <header><h1>Watch List</h1></header>
     <div class="bg"></div>
     <div class="movies">
       <div class="row1">
