id on label for styling other movies

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="bg"></div>
     <div class="movies">
       <div class="row1">
-      <input class="box" id="1" type="checkbox" data-time="1:57"><label for="1"><img class="check" src="assets/checked.png"></label>Nausicaä of the Valley of the Wind</input>
+      <input class="box" id="1" type="checkbox" data-time="1:57"><label id="l1" for="1"><img class="check" src="assets/checked.png"></label>Nausicaä of the Valley of the Wind</input>
       <input class="box" type="checkbox" data-time="2:04">Castle in the Sky</input>
       <input class="box" type="checkbox" data-time="1:29">Grave of the Fireflies</input>
     </div>
