--- a/index.html
+++ b/index.html
@@ -10,38 +10,38 @@
     <div class="movies">
       <div class="row1">
       <input class="box" id="1" type="checkbox" data-time="1:57"><label id="l1" for="1"><img class="check" src="assets/checked.png"></label><p>Nausicaä of the<br>Valley of the Wind</p></input>
-      <input class="box" id="2" type="checkbox" data-time="2:04"><label id="l2" for="2"><img class="check" src="assets/checked.png"></label>Castle in the Sky</input>
-      <input class="box" id="3" type="checkbox" data-time="1:29"><label id="l3" for="3"><img class="check" src="assets/checked.png"></label>Grave of the Fireflies</input>
-      <input class="box" id="4" type="checkbox" data-time="1:27"><label id="l4" for="4"><img class="check" src="assets/checked.png"></label>My Neighbor Totoro</input><br>
+      <input class="box" id="2" type="checkbox" data-time="2:04"><label id="l2" for="2"><img class="check" src="assets/checked.png"></label><p>Castle in the Sky</p></input>
+      <input class="box" id="3" type="checkbox" data-time="1:29"><label id="l3" for="3"><img class="check" src="assets/checked.png"></label><p>Grave of the Fireflies</p></input>
+      <input class="box" id="4" type="checkbox" data-time="1:27"><label id="l4" for="4"><img class="check" src="assets/checked.png"></label><p>My Neighbor Totoro</p></input><br>
     </div>
       <div class="row2">
-      <input class="box" id="5" type="checkbox" data-time="1:43"><label id="l5" for="5"><img class="check" src="assets/checked.png"></label>Kiki's Delivery Service</input>
-      <input class="box" id="6" type="checkbox" data-time="1:58"><label id="l6" for="6"><img class="check" src="assets/checked.png"></label>Only Yesterday</input>
-      <input class="box" id="7" type="checkbox" data-time="1:34"><label id="l7" for="7"><img class="check" src="assets/checked.png"></label>Porco Rosso</input>
-      <input class="box" id="8" type="checkbox" data-time="1:12"><label id="l8" for="8"><img class="check" src="assets/checked.png"></label>Ocean Waves</input><br>
+      <input class="box" id="5" type="checkbox" data-time="1:43"><label id="l5" for="5"><img class="check" src="assets/checked.png"></label><p>Kiki's Delivery<br>Service</p></input>
+      <input class="box" id="6" type="checkbox" data-time="1:58"><label id="l6" for="6"><img class="check" src="assets/checked.png"></label><p>Only Yesterday</p></input>
+      <input class="box" id="7" type="checkbox" data-time="1:34"><label id="l7" for="7"><img class="check" src="assets/checked.png"></label><p>Porco Rosso</p></input>
+      <input class="box" id="8" type="checkbox" data-time="1:12"><label id="l8" for="8"><img class="check" src="assets/checked.png"></label><p>Ocean Waves</p></input><br>
     </div>
         <div class="row3">
-      <input class="box" id="9" type="checkbox" data-time="1:59"><label id="l9" for="9"><img class="check" src="assets/checked.png"></label>Pom Poko</input>
-      <input class="box" id="10" type="checkbox" data-time="1:51"><label id="l10" for="10"><img class="check" src="assets/checked.png"></label>Whisper of the Heart</input>
-      <input class="box" id="11" type="checkbox" data-time="2:13"><label id="l11" for="11"><img class="check" src="assets/checked.png"></label>Princess Mononoke</input>
-      <input class="box" id="12" type="checkbox" data-time="1:44"><label id="l12" for="12"><img class="check" src="assets/checked.png"></label>My Neighbors the Yamadas</input><br>
+      <input class="box" id="9" type="checkbox" data-time="1:59"><label id="l9" for="9"><img class="check" src="assets/checked.png"></label><p>Pom Poko</p></input>
+      <input class="box" id="10" type="checkbox" data-time="1:51"><label id="l10" for="10"><img class="check" src="assets/checked.png"></label><p>Whisper of the Heart</p></input>
+      <input class="box" id="11" type="checkbox" data-time="2:13"><label id="l11" for="11"><img class="check" src="assets/checked.png"></label><p>Princess Mononoke</p></input>
+      <input class="box" id="12" type="checkbox" data-time="1:44"><label id="l12" for="12"><img class="check" src="assets/checked.png"></label><p>My Neighbors the Yamadas</p></input><br>
     </div>
       <div class="row4">
-        <input class="box" id="13" type="checkbox" data-time="2:05"><label id="l13" for="13"><img class="check" src="assets/checked.png"></label>Spirited Away</input>
-        <input class="box" id="14" type="checkbox" data-time="1:15"><label id="l14" for="14"><img class="check" src="assets/checked.png"></label>The Cat Returns</input>
-        <input class="box" id="15" type="checkbox" data-time="1:59"><label id="l15" for="15"><img class="check" src="assets/checked.png"></label>Howl's Moving Castle</input>
-        <input class="box" id="16" type="checkbox" data-time="1:55"><label id="l16" for="16"><img class="check" src="assets/checked.png"></label>Tales from Earthsea</input><br>
+        <input class="box" id="13" type="checkbox" data-time="2:05"><label id="l13" for="13"><img class="check" src="assets/checked.png"></label><p>Spirited Away</p></input>
+        <input class="box" id="14" type="checkbox" data-time="1:15"><label id="l14" for="14"><img class="check" src="assets/checked.png"></label><p>The Cat Returns</p></input>
+        <input class="box" id="15" type="checkbox" data-time="1:59"><label id="l15" for="15"><img class="check" src="assets/checked.png"></label><p>Howl's Moving Castle</p></input>
+        <input class="box" id="16" type="checkbox" data-time="1:55"><label id="l16" for="16"><img class="check" src="assets/checked.png"></label><p>Tales from Earthsea</p></input><br>
       </div>
       <div class="row5">
-        <input class="box" id="17" type="checkbox" data-time="1:41"><label id="l17" for="17"><img class="check" src="assets/checked.png"></label>Ponyo</input>
-        <input class="box" id="18" type="checkbox" data-time="1:35"><label id="l18" for="18"><img class="check" src="assets/checked.png"></label>Arrietty</input>
-        <input class="box" id="19" type="checkbox" data-time="1:32"><label id="l19" for="19"><img class="check" src="assets/checked.png"></label>From Up on Poppy Hill</input>
-        <input class="box" id="20" type="checkbox" data-time="1:06"><label id="l20" for="20"><img class="check" src="assets/checked.png"></label>The Wind Rises</input><br>
+        <input class="box" id="17" type="checkbox" data-time="1:41"><label id="l17" for="17"><img class="check" src="assets/checked.png"></label><p>Ponyo</p></input>
+        <input class="box" id="18" type="checkbox" data-time="1:35"><label id="l18" for="18"><img class="check" src="assets/checked.png"></label><p>Arrietty</p></input>
+        <input class="box" id="19" type="checkbox" data-time="1:32"><label id="l19" for="19"><img class="check" src="assets/checked.png"></label><p>From Up on Poppy Hill</p></input>
+        <input class="box" id="20" type="checkbox" data-time="1:06"><label id="l20" for="20"><img class="check" src="assets/checked.png"></label><p>The Wind Rises</p></input><br>
       </div>
       <div class="row7">
-      <input class="box" id="21" type="checkbox" data-time="2:17"><label id="l21" for="21"><img class="check" src="assets/checked.png"></label>The Tale of the Princess Kaguya</input>
-      <input class="box" id="22" type="checkbox" data-time="1:43"><label id="l22" for="22"><img class="check" src="assets/checked.png"></label>When Marnie Was There</input>
-      <input class="box" id="23" type="checkbox" data-time="0:00"><label id="l23" for="23"><img class="check" src="assets/checked.png"></label>How Do You Live?</input>
+      <input class="box" id="21" type="checkbox" data-time="2:17"><label id="l21" for="21"><img class="check" src="assets/checked.png"></label><p>The Tale of the<br>Princess Kaguya</p></input>
+      <input class="box" id="22" type="checkbox" data-time="1:43"><label id="l22" for="22"><img class="check" src="assets/checked.png"></label><p>When Marnie Was There</p></input>
+      <input class="box" id="23" type="checkbox" data-time="0:00"><label id="l23" for="23"><img class="check" src="assets/checked.png"></label><p>How Do You Live?</p></input>
     </div>
     </div>
     <div class="totalhours"></div><p>:</p>
