total time on one line

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
       <input class="box" id="23" type="checkbox" data-time="0:00"><label id="l23" for="23"><img class="check" src="assets/checked.png"></label><p>How Do You Live?</p></input>
     </div>
     </div>
-    <div class="totalhours"></div><p>:</p>
+    <div class="totalTime">
+    <div class="totalhours"></div>:
     <div class="totalminutes"></div>
-    <div class="gif"></div>
+  </div>
     <script src="index.js"></script>
 </body>
 </html>
