--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header><h1>Watch List</h1></header>
-    <div class="bg"></div>
+  <header><h1></h1><div class="totalTime">
+      <div class="totalhours"></div>:
+      <div class="totalminutes"></div>
+    </div></header>
     <div class="movies">
       <div class="row1">
       <input class="box" id="1" type="checkbox" data-time="1:57"><label id="l1" for="1"><img class="check" src="assets/checked.png"></label><p>Nausicaä of the<br>Valley of the Wind</p></input>
@@ -44,10 +46,6 @@
       <input class="box" id="23" type="checkbox" data-time="0:00"><label id="l23" for="23"><img class="check" src="assets/checked.png"></label><p>How Do You Live?</p></input>
     </div>
     </div>
-    <div class="totalTime">
-    <div class="totalhours"></div>:
-    <div class="totalminutes"></div>
-  </div>
     <script src="index.js"></script>
 </body>
 </html>
