header & styling done with basic page info, including the entire point of the challenge

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header><h1></h1><div class="totalTime">
-      <div class="totalhours"></div>:
-      <div class="totalminutes"></div>
-    </div></header>
+  <h1>&nbsp;&nbsp;Check off what movies you've seen by clicking the movie's icon!</h1>
+  <ul>
+    <li>There are currently <b>22</b> Ghibli movies, with at least one on the way!</li>
+    <li>It would take<div class="totalTime"><div class="totalhours"></div>&nbsp;Hours &&nbsp;
+    <div class="totalminutes"></div>&nbsp;Minutes</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to watch all the Ghibli movies!</li></ul></ul><div class="totalTime">
+    <header>
+    </header>
     <div class="movies">
       <div class="row1">
       <input class="box" id="1" type="checkbox" data-time="1:57"><label id="l1" for="1"><img class="check" src="assets/checked.png"></label><p>Nausicaä of the<br>Valley of the Wind</p></input>
