--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </header>
     <div class="movies">
       <div class="row1">
-      <input class="box" id="1" type="checkbox" data-time="1:57"><label id="l1" for="1"><img class="check" src="assets/checked.png"></label><p>Nausicaä of the<br>Valley of the Wind</p></input>
-      <input class="box" id="2" type="checkbox" data-time="2:04"><label id="l2" for="2"><img class="check" src="assets/checked.png"></label><p>Castle in the Sky</p></input>
+      <input class="box" id="1" type="checkbox" data-time="1:57"><label id="l1" for="1"><img class="check" src="assets/checked.png"></label><p>Nausicaä of the<br>Valley of the Wind<br>1984 1hr56min</p></input>
+      <input class="box" id="2" type="checkbox" data-time="2:04"><label id="l2" for="2"><img class="check" src="assets/checked.png"></label><p>Castle in the Sky<br><br>1986 2hrs4mins</p></input>
       <input class="box" id="3" type="checkbox" data-time="1:29"><label id="l3" for="3"><img class="check" src="assets/checked.png"></label><p>Grave of the<br>Fireflies</p></input>
       <input class="box" id="4" type="checkbox" data-time="1:27"><label id="l4" for="4"><img class="check" src="assets/checked.png"></label><p>My Neighbor<br>Totoro</p></input><br>
     </div>
