--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       <input class="box" id="4" type="checkbox" data-time="1:27"><label id="l4" for="4"><img class="check" src="assets/checked.png"></label><p>My Neighbor<br>Totoro<br>1988 | 1hr27mins</p></input><br>
     </div>
       <div class="row2">
-      <input class="box" id="5" type="checkbox" data-time="1:43"><label id="l5" for="5"><img class="check" src="assets/checked.png"></label><p>Kiki's Delivery<br>Service</p></input>
-      <input class="box" id="6" type="checkbox" data-time="1:58"><label id="l6" for="6"><img class="check" src="assets/checked.png"></label><p>Only Yesterday</p></input>
-      <input class="box" id="7" type="checkbox" data-time="1:34"><label id="l7" for="7"><img class="check" src="assets/checked.png"></label><p>Porco Rosso</p></input>
-      <input class="box" id="8" type="checkbox" data-time="1:12"><label id="l8" for="8"><img class="check" src="assets/checked.png"></label><p>Ocean Waves</p></input><br>
+      <input class="box" id="5" type="checkbox" data-time="1:43"><label id="l5" for="5"><img class="check" src="assets/checked.png"></label><p>Kiki's Delivery<br>Service<br>1989 | 1hr43mins</p></input>
+      <input class="box" id="6" type="checkbox" data-time="1:58"><label id="l6" for="6"><img class="check" src="assets/checked.png"></label><p>Only Yesterday<br><br>1991 | 1hr58mins</p></input>
+      <input class="box" id="7" type="checkbox" data-time="1:34"><label id="l7" for="7"><img class="check" src="assets/checked.png"></label><p>Porco Rosso<br><br>1992 | 1hr34mins</p></input>
+      <input class="box" id="8" type="checkbox" data-time="1:12"><label id="l8" for="8"><img class="check" src="assets/checked.png"></label><p>Ocean Waves<br><br>1993 | 1hr12mins</p></input><br>
     </div>
         <div class="row3">
-      <input class="box" id="9" type="checkbox" data-time="1:59"><label id="l9" for="9"><img class="check" src="assets/checked.png"></label><p>Pom Poko</p></input>
+      <input class="box" id="9" type="checkbox" data-time="1:59"><label id="l9" for="9"><img class="check" src="assets/checked.png"></label><p>Pom Poko<br>1994 | 1hr59mins</p></input>
       <input class="box" id="10" type="checkbox" data-time="1:51"><label id="l10" for="10"><img class="check" src="assets/checked.png"></label><p>Whisper of<br>the Heart</p></input>
       <input class="box" id="11" type="checkbox" data-time="2:13"><label id="l11" for="11"><img class="check" src="assets/checked.png"></label><p>Princess<br>Mononoke</p></input>
       <input class="box" id="12" type="checkbox" data-time="1:44"><label id="l12" for="12"><img class="check" src="assets/checked.png"></label><p>My Neighbors<br>the Yamadas</p></input><br>
@@ -46,7 +46,7 @@
       <div class="row7">
       <input class="box" id="21" type="checkbox" data-time="2:17"><label id="l21" for="21"><img class="check" src="assets/checked.png"></label><p>The Tale of the<br>Princess Kaguya</p></input>
       <input class="box" id="22" type="checkbox" data-time="1:43"><label id="l22" for="22"><img class="check" src="assets/checked.png"></label><p>When Marnie<br>Was There</p></input>
-      <input class="box" id="23" type="checkbox" data-time="0:00"><label id="l23" for="23"><img class="check" src="assets/checked.png"></label><p>How Do You Live?</p></input>
+      <input class="box" id="23" type="checkbox" data-time="0:00"><label id="l23" for="23"><img class="check" src="assets/checked.png"></label><p>How Do You Live?<br><br>TBA | N/A</p></input>
     </div>
     </div>
     <script src="index.js"></script>
