--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
       <input class="box" id="8" type="checkbox" data-time="1:12"><label id="l8" for="8"><img class="check" src="assets/checked.png"></label><p>Ocean Waves<br><br>1993 | 1hr12mins</p></input><br>
     </div>
         <div class="row3">
-      <input class="box" id="9" type="checkbox" data-time="1:59"><label id="l9" for="9"><img class="check" src="assets/checked.png"></label><p>Pom Poko<br>1994 | 1hr59mins</p></input>
-      <input class="box" id="10" type="checkbox" data-time="1:51"><label id="l10" for="10"><img class="check" src="assets/checked.png"></label><p>Whisper of<br>the Heart</p></input>
-      <input class="box" id="11" type="checkbox" data-time="2:13"><label id="l11" for="11"><img class="check" src="assets/checked.png"></label><p>Princess<br>Mononoke</p></input>
-      <input class="box" id="12" type="checkbox" data-time="1:44"><label id="l12" for="12"><img class="check" src="assets/checked.png"></label><p>My Neighbors<br>the Yamadas</p></input><br>
+      <input class="box" id="9" type="checkbox" data-time="1:59"><label id="l9" for="9"><img class="check" src="assets/checked.png"></label><p>Pom Poko<br><br>1994 | 1hr59mins</p></input>
+      <input class="box" id="10" type="checkbox" data-time="1:51"><label id="l10" for="10"><img class="check" src="assets/checked.png"></label><p>Whisper of<br>the Heart<br>1995 | 1hr51mins</p></input>
+      <input class="box" id="11" type="checkbox" data-time="2:13"><label id="l11" for="11"><img class="check" src="assets/checked.png"></label><p>Princess<br>Mononoke<br>1997 | 2hrs13mins</p></input>
+      <input class="box" id="12" type="checkbox" data-time="1:44"><label id="l12" for="12"><img class="check" src="assets/checked.png"></label><p>My Neighbors<br>the Yamadas<br>1999 | 1hr44mins</p></input><br>
     </div>
       <div class="row4">
-        <input class="box" id="13" type="checkbox" data-time="2:05"><label id="l13" for="13"><img class="check" src="assets/checked.png"></label><p>Spirited Away</p></input>
-        <input class="box" id="14" type="checkbox" data-time="1:15"><label id="l14" for="14"><img class="check" src="assets/checked.png"></label><p>The Cat Returns</p></input>
-        <input class="box" id="15" type="checkbox" data-time="1:59"><label id="l15" for="15"><img class="check" src="assets/checked.png"></label><p>Howl's<br>Moving Castle</p></input>
-        <input class="box" id="16" type="checkbox" data-time="1:55"><label id="l16" for="16"><img class="check" src="assets/checked.png"></label><p>Tales from<br>Earthsea</p></input><br>
+        <input class="box" id="13" type="checkbox" data-time="2:05"><label id="l13" for="13"><img class="check" src="assets/checked.png"></label><p>Spirited Away<br><br>2001 | 2hrs5mins</p></input>
+        <input class="box" id="14" type="checkbox" data-time="1:15"><label id="l14" for="14"><img class="check" src="assets/checked.png"></label><p>The Cat Returns<br><br>2002 | 1hr15mins</p></input>
+        <input class="box" id="15" type="checkbox" data-time="1:59"><label id="l15" for="15"><img class="check" src="assets/checked.png"></label><p>Howl's<br>Moving Castle<br>2004 | 1hr59mins</p></input>
+        <input class="box" id="16" type="checkbox" data-time="1:55"><label id="l16" for="16"><img class="check" src="assets/checked.png"></label><p>Tales from<br>Earthsea<br>2006 | 1hr55mins</p></input><br>
       </div>
       <div class="row5">
         <input class="box" id="17" type="checkbox" data-time="1:41"><label id="l17" for="17"><img class="check" src="assets/checked.png"></label><p>Ponyo</p></input>
