last row, & done

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         <input class="box" id="16" type="checkbox" data-time="1:55"><label id="l16" for="16"><img class="check" src="assets/checked.png"></label><p>Tales from<br>Earthsea<br>2006 | 1hr55mins</p></input><br>
       </div>
       <div class="row5">
-        <input class="box" id="17" type="checkbox" data-time="1:41"><label id="l17" for="17"><img class="check" src="assets/checked.png"></label><p>Ponyo</p></input>
-        <input class="box" id="18" type="checkbox" data-time="1:35"><label id="l18" for="18"><img class="check" src="assets/checked.png"></label><p>Arrietty</p></input>
-        <input class="box" id="19" type="checkbox" data-time="1:32"><label id="l19" for="19"><img class="check" src="assets/checked.png"></label><p>From Up on<br>Poppy Hill</p></input>
-        <input class="box" id="20" type="checkbox" data-time="1:06"><label id="l20" for="20"><img class="check" src="assets/checked.png"></label><p>The Wind Rises</p></input><br>
+        <input class="box" id="17" type="checkbox" data-time="1:41"><label id="l17" for="17"><img class="check" src="assets/checked.png"></label><p>Ponyo<br><br>2008 | 1hr41mins</p></input>
+        <input class="box" id="18" type="checkbox" data-time="1:35"><label id="l18" for="18"><img class="check" src="assets/checked.png"></label><p>Arrietty<br><br>2010 | 1hr35mins</p></input>
+        <input class="box" id="19" type="checkbox" data-time="1:32"><label id="l19" for="19"><img class="check" src="assets/checked.png"></label><p>From Up on<br>Poppy Hill<br>2011 | 1hr32mins</p></input>
+        <input class="box" id="20" type="checkbox" data-time="1:06"><label id="l20" for="20"><img class="check" src="assets/checked.png"></label><p>The Wind Rises<br><br>2015 | 1hr6mins</p></input><br>
       </div>
       <div class="row7">
-      <input class="box" id="21" type="checkbox" data-time="2:17"><label id="l21" for="21"><img class="check" src="assets/checked.png"></label><p>The Tale of the<br>Princess Kaguya</p></input>
-      <input class="box" id="22" type="checkbox" data-time="1:43"><label id="l22" for="22"><img class="check" src="assets/checked.png"></label><p>When Marnie<br>Was There</p></input>
+      <input class="box" id="21" type="checkbox" data-time="2:17"><label id="l21" for="21"><img class="check" src="assets/checked.png"></label><p>The Tale of the<br>Princess Kaguya<br>2013 | 2hrs17mins</p></input>
+      <input class="box" id="22" type="checkbox" data-time="1:43"><label id="l22" for="22"><img class="check" src="assets/checked.png"></label><p>When Marnie<br>Was There<br>2014 | 1hr43mins</p></input>
       <input class="box" id="23" type="checkbox" data-time="0:00"><label id="l23" for="23"><img class="check" src="assets/checked.png"></label><p>How Do You Live?<br><br>TBA | N/A</p></input>
     </div>
     </div>
